Fixing header hero text overlap.

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 	font-weight: bold;
     color: white;
 }
-.header {
+header {
 	min-height: 100vh;
 	width: 100%;
 	/* background-position: center;
